// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clicking the action icon should open a popover that displays the given actions 1`] = `
<div>
  <section
    class="block expanded"
    role="switch"
  >
    <div
      class="content"
    >
      <header
        class="header"
      >
        <div
          class="iconButtons"
        >
          <button
            type="button"
          >
            <span
              aria-label="su-more-circle"
              class="su-more-circle"
            />
          </button>
          <button
            type="button"
          >
            <span
              aria-label="su-collapse-vertical"
              class="su-collapse-vertical"
            />
          </button>
        </div>
      </header>
      <article
        class="children"
      >
        Block content
      </article>
    </div>
  </section>
</div>
`;

exports[`Render a collapsed block 1`] = `
<div>
  <section
    class="block"
    role="switch"
  >
    <div
      class="content"
    >
      <header
        class="header"
      >
        <div
          class="icons"
        >
          <span
            aria-label="su-eye"
            class="su-eye"
          />
          <span
            aria-label="su-people"
            class="su-people"
          />
        </div>
        <span
          aria-label="su-expand-vertical"
          class="su-expand-vertical"
        />
      </header>
      <article
        class="children"
      >
        Some block content
      </article>
    </div>
  </section>
</div>
`;

exports[`Render a selected block 1`] = `
<div>
  <section
    class="block expanded selected"
    role="switch"
  >
    <div
      class="content"
    >
      <header
        class="header"
      >
        <div
          class="iconButtons"
        />
      </header>
      <article
        class="children"
      >
        Some block content
      </article>
    </div>
  </section>
</div>
`;

exports[`Render an block without handle or collapse or expand button 1`] = `
<div>
  <section
    class="block expanded"
    role="switch"
  >
    <div
      class="content"
    >
      <header
        class="header"
      >
        <div
          class="iconButtons"
        />
      </header>
      <article
        class="children"
      >
        Some block content
      </article>
    </div>
  </section>
</div>
`;

exports[`Render an expanded block with multiple types 1`] = `
<div>
  <section
    class="block expanded"
    role="switch"
  >
    <div
      class="handle"
    >
      <span>
        Test
      </span>
    </div>
    <div
      class="content"
    >
      <header
        class="header"
      >
        <div
          class="types"
        >
          <div
            class="select"
            role="none"
          >
            <button
              class="displayValue default"
              type="button"
            >
              <div
                aria-label="Type1"
                class="croppedText"
                title="Type1"
              >
                <div
                  aria-hidden="true"
                  class="front"
                >
                  Typ
                </div>
                <div
                  aria-hidden="true"
                  class="back"
                >
                  <span>
                    e1
                  </span>
                </div>
                <div
                  class="whole"
                >
                  Type1
                </div>
              </div>
              <span
                aria-label="su-angle-down"
                class="su-angle-down toggle"
              />
            </button>
          </div>
        </div>
        <div
          class="icons"
        >
          <span
            aria-label="su-eye"
            class="su-eye"
          />
          <span
            aria-label="su-people"
            class="su-people"
          />
        </div>
        <div
          class="iconButtons"
        >
          <button
            type="button"
          >
            <span
              aria-label="su-cog"
              class="su-cog"
            />
          </button>
          <button
            type="button"
          >
            <span
              aria-label="su-collapse-vertical"
              class="su-collapse-vertical"
            />
          </button>
        </div>
      </header>
      <article
        class="children"
      >
        Some block content
      </article>
    </div>
  </section>
</div>
`;
